#720 - minor refactoring